[gd_scene load_steps=8 format=3 uid="uid://bqkygim6mafhs"]

[ext_resource type="Script" path="res://components/UI/ingame.gd" id="1_fib7h"]
[ext_resource type="Script" path="res://components/UI/inspect_ui.gd" id="2_rwocl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcmsc"]
bg_color = Color(0.0156863, 0.0156863, 0.0156863, 0.278431)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_752xw"]
font_size = 11

[sub_resource type="LabelSettings" id="LabelSettings_os2uf"]
font_size = 11

[sub_resource type="LabelSettings" id="LabelSettings_ucri7"]

[sub_resource type="LabelSettings" id="LabelSettings_re4ee"]
font_size = 11

[node name="ingame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fib7h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 544.1
offset_right = -944.0
offset_bottom = 0.0999756
grow_horizontal = 2
grow_vertical = 2

[node name="Wood" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.24
offset_bottom = 0.039999
text = "Coin : 1"
horizontal_alignment = 1

[node name="Stone" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.24
anchor_right = 1.0
anchor_bottom = 0.481
offset_top = 0.039999
offset_bottom = -0.0240021
text = "Rock : 3"
horizontal_alignment = 1

[node name="Gold" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.721
offset_top = -2.0
offset_bottom = 0.0159988
text = "Gold : 2"
horizontal_alignment = 1

[node name="Mana" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.721
anchor_right = 1.0
anchor_bottom = 0.962
offset_top = 0.0159988
offset_bottom = -0.0480042
text = "Mana : 0"
horizontal_alignment = 1

[node name="SpawnWorker" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.341
anchor_top = 0.221
anchor_right = 3.149
anchor_bottom = 0.5
offset_left = 0.071991
offset_top = 0.0159988
offset_right = 0.00793457
offset_bottom = 2.0
theme_override_colors/font_hover_color = Color(0.282047, 0.559626, 0.796376, 1)
theme_override_colors/font_pressed_color = Color(0, 0.733333, 0.854902, 1)
toggle_mode = true
text = "spawn worker"

[node name="SpawnCrossbow" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.341
anchor_top = -0.155
anchor_right = 3.149
anchor_bottom = 0.143
offset_left = 0.071991
offset_top = 0.0200005
offset_right = 0.00793457
offset_bottom = 0.0279989
theme_override_colors/font_hover_color = Color(0.282047, 0.559626, 0.796376, 1)
theme_override_colors/font_pressed_color = Color(0, 0.733333, 0.854902, 1)
toggle_mode = true
text = "spawn crossbow"
metadata/_edit_use_anchors_ = true

[node name="SpawnTesla" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.341
anchor_top = -0.539615
anchor_right = 3.149
anchor_bottom = -0.241615
offset_left = 0.071991
offset_top = 0.0200005
offset_right = 0.00793457
offset_bottom = 0.0279989
theme_override_colors/font_hover_color = Color(0.282047, 0.559626, 0.796376, 1)
theme_override_colors/font_pressed_color = Color(0, 0.733333, 0.854902, 1)
toggle_mode = true
text = "spawn tesla"
metadata/_edit_use_anchors_ = true

[node name="inspect_ui" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.787
anchor_top = 0.242
anchor_right = 0.972
anchor_bottom = 0.759
offset_left = 0.375916
offset_top = 0.18399
offset_right = 0.255981
offset_bottom = 0.167969
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tcmsc")
script = ExtResource("2_rwocl")

[node name="towername" type="Label" parent="inspect_ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -138.5
offset_right = 61.5
offset_bottom = -81.5
grow_horizontal = 2
grow_vertical = 2
text = "BOB"
label_settings = SubResource("LabelSettings_752xw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgradebuttons" type="HBoxContainer" parent="inspect_ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = 64.5
offset_right = 77.5
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="1" type="Button" parent="inspect_ui/upgradebuttons"]
layout_mode = 2
text = "1"
flat = true

[node name="Label" type="Label" parent="inspect_ui/upgradebuttons/1"]
layout_mode = 0
offset_left = -11.0
offset_top = 34.0
offset_right = 29.0
offset_bottom = 109.0
text = "1g
2w
3s"
label_settings = SubResource("LabelSettings_os2uf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="2" type="Button" parent="inspect_ui/upgradebuttons"]
layout_mode = 2
text = "1"
flat = true

[node name="Label" type="Label" parent="inspect_ui/upgradebuttons/2"]
layout_mode = 0
offset_left = -11.0
offset_top = 34.0
offset_right = 29.0
offset_bottom = 109.0
text = "1g
2w
3s"
label_settings = SubResource("LabelSettings_os2uf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="3" type="Button" parent="inspect_ui/upgradebuttons"]
layout_mode = 2
text = "1"
flat = true

[node name="Label" type="Label" parent="inspect_ui/upgradebuttons/3"]
layout_mode = 0
offset_left = -11.0
offset_top = 34.0
offset_right = 29.0
offset_bottom = 109.0
text = "1g
2w
3s"
label_settings = SubResource("LabelSettings_os2uf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="4" type="Button" parent="inspect_ui/upgradebuttons"]
layout_mode = 2
text = "1"
flat = true

[node name="Label" type="Label" parent="inspect_ui/upgradebuttons/4"]
layout_mode = 0
offset_left = -11.0
offset_top = 34.0
offset_right = 29.0
offset_bottom = 109.0
text = "1g
2w
3s"
label_settings = SubResource("LabelSettings_os2uf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="5" type="Button" parent="inspect_ui/upgradebuttons"]
layout_mode = 2
text = "1"
flat = true

[node name="Label" type="Label" parent="inspect_ui/upgradebuttons/5"]
layout_mode = 0
offset_left = -11.0
offset_top = 34.0
offset_right = 29.0
offset_bottom = 109.0
text = "1g
2w
3s"
label_settings = SubResource("LabelSettings_os2uf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="title" type="Label" parent="inspect_ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -159.5
offset_right = 60.5
offset_bottom = -102.5
grow_horizontal = 2
grow_vertical = 2
text = "UPGRADE"
label_settings = SubResource("LabelSettings_ucri7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="description" type="Label" parent="inspect_ui"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.5
offset_top = 107.0
offset_right = 79.5
offset_bottom = 255.0
grow_horizontal = 2
text = "+30% health
- 32% range
+ Attack has higher chance
of x
+ Targets random units"
label_settings = SubResource("LabelSettings_752xw")

[node name="upgrade title" type="Label" parent="inspect_ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -98.5
offset_right = 60.5
offset_bottom = -41.5
grow_horizontal = 2
grow_vertical = 2
text = "Upgrade Title"
label_settings = SubResource("LabelSettings_re4ee")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="inspect_ui"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="Panel/SpawnWorker" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/SpawnWorker" to="." method="_on_spawn_worker_pressed"]
[connection signal="pressed" from="Panel/SpawnCrossbow" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/SpawnCrossbow" to="." method="_on_spawn_crossbow_pressed"]
[connection signal="pressed" from="Panel/SpawnTesla" to="." method="_on_spawn_tesla_pressed"]
